--- a/app/src/main/res/layout/banner_viewpager.xml
+++ b/app/src/main/res/layout/banner_viewpager.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-    <!--
+    <!--&lt;!&ndash;-->
         <com.youth.banner.Banner
             android:id="@+id/banner"
             android:layout_gravity="center_horizontal"
@@ -13,11 +13,11 @@
             app:indicator_height="5dp"
             app:indicator_width="5dp"
             app:image_scale_type="fit_xy"
-            app:is_auto_play="true" />-->
+            app:is_auto_play="true" />
 
-    <TextView
-        android:id="@+id/title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <!--<TextView-->
+        <!--android:id="@+id/title"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content" />-->
 
 </LinearLayout>
